replace data sync